# RTC-Discord-Clone

./: .gitignore  CONTRIBUTING.md  README.md  package-lock.json  run_coverage.ps1  run_tests.ps1  start_rtc.ps1
.github/workflows/: ci.yml  release.yml
client/: next-intl.config.ts  next.config.js  package-lock.json  package.json
client/locales/: en.json  fr.json
client/src/: middleware.ts
client/src/app/: layout.tsx  page.tsx
client/src/app/[locale]/: layout.tsx  page.tsx
client/src/app/[locale]/dm/: page.tsx
client/src/app/login/: page.tsx
client/src/app/servers/: page.tsx
client/src/components/: BanListPage.tsx  BanModal.tsx  ChannelsList.tsx  ChatHeader.tsx  ChatInput.tsx  ChatZone.tsx  CreateServerModal.tsx  DMList.tsx  EmptyServers.tsx  ErrorMessage.tsx  HomePage.tsx  JoinServerModal.tsx  LanguageSwitcher.tsx  LoadingSkeleton.tsx  LoginForm.tsx  MembersList.tsx  MessageList.tsx  ReactionPicker.tsx  RegisterForm.tsx  ServerCard.tsx  ServersBar.tsx  ThemeProvider.tsx
client/src/lib/: api.ts  auth.ts  errors.ts  types.ts  validation.ts  websocket.ts
client/src/styles/: globals.css
docs/: API.md  README.md  WEBSOCKET.md
electron/: main.js  preload.js
server/: .env.example  Cargo.toml  WEBSOCKET.md  run_tests.ps1
server/migrations/: 001_users.sql  002_v2.sql
server/src/: auth.rs  db.rs  handlers.rs  main.rs  middleware.rs  models.rs  mongo.rs  websocket.rs
server/src/handlers/: channels.rs  dm.rs  gifs.rs  health.rs  invitations.rs  members.rs  messages.rs  mod.rs  reactions.rs  servers.rs
server/tests/: api_tests.rs
(+5 files in other folders)
