[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
# HTTP client pour appels API externes (proxy GIF Tenor)
reqwest = { version = "0.12", features = ["json"] }


# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database - PostgreSQL
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "macros"] }
dotenvy = "0.15"

# Database - MongoDB (messages)
mongodb = "2.8"
futures = "0.3"

# Auth (Zakary - Argon2 + JWT)
jsonwebtoken = "9"
argon2 = "0.5"
password-hash = "0.5"
rand_core = "0.6"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
